welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var i = getMondeHauteur()
  var T = new Array [Color](i)
  
}

getCouleurSol()

avance()
T(1) = getCouleurSol()